issue book api added here

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,13 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl.auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 
 #jwt Secret Key
 jwt.secret=yourVerySecretKeyThatIsAtLeast32CharactersLongForHMAC256
 jwt.expiration=3600000
+spring.jpa.hibernate.ddl-auto=update
+
 
 
 
